--- a/SinFronteras/src/main/resources/messages.properties
+++ b/SinFronteras/src/main/resources/messages.properties
@@ -1,2 +1,2 @@
 user.name.invalid = Name entered is invalid. It must be between {2} and {1} characters.
-user.email.invalid = Invalid email! Please enter valid email.
+user.email.invalid = Correo invalido, por favor ingrese un correo que no exista.
